--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,7 +11,7 @@
             <%- include('partials/navegation') -%>
         </div>
 
-        <div class="col-sm-10 pt-5 conten">
+        <div class="col-sm-10 pt-5 conten mb-5 pb-5">
           <div class="container-fluid">
             <div class="row">
               <div class="col-sm-5">
@@ -27,7 +27,7 @@
                   </ul>
                 </div>
               </div>
-
+              <!--clear
               <div class="col-sm-2">
                 <div class="shadow p-3 mb-3 bg-white rounded">
                   <h4 class="title">
@@ -37,13 +37,14 @@
                   <button class="btn btn-primary w-100" >Generar</button>
                 </div>
               </div>
+            -->
             </div>
           </div>
-          <div class="w-100 bg-white shadow-sm p-3 pt-4 mt-5 bg-white rounded">
+          <div class="w-100 bg-white shadow-sm p-3 pt-4 mt-5 bg-white rounded primaryConten">
             <table class="table">
               <thead>
                 <tr>
-                  <th scope="col">Pedido</th>
+                 
                   <th scope="col">Fecha</th>
                   <th scope="col">Cliente</th>
                   <th scope="col">Total</th>
@@ -54,7 +55,7 @@
                   <% list.forEach(function(item){ %>
 
                     <tr>
-                    <th scope="row"><%= item.ID %></th>
+                    
                     <td><%= item.FECHA_HORA %></td>
                     <td><%= item.NAME %> <%= item.APELLIDO %></td>
                     <td><%= item.VALOR_UND%></td>
