--- a/src/views/store.ejs
+++ b/src/views/store.ejs
@@ -17,7 +17,7 @@
         <div class="col-sm-10 pt-5 conten">
             <h1>Compra tus herramientas</h1>
             <%  products.forEach(function(item){ %>
-                <div class="card float-left m-3" style="width: 19rem;">
+                <div class="card float-left m-3 carConten" style="width: 19rem;">
                     <img src="<%= item.IMAGE %>" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title"><%= item.NAME %></h5>
